--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Our Office</h5>
-                            <p class="m-0">123 Street, New York, USA</p>
+                            <p class="m-0">maven street, North Virgina, USA</p>
                         </div>
                     </div>
                 </div>
